feat: add SafeJackson polymorphism guard and JSpecify null-safety baseline